deployment-pv.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-deployment
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts: 
            - name: my-volume
              mountPath: /var/www/html
      volumes:      
        - name: my-volume
          persistentVolumeClaim:
             claimName: local-pvc
