pod.yml

kind: Pod
apiVersion: v1
metadata:
        name: nginx-pod
        namespace: nginx
spec:
        containers:
                - name: nginx
                  image: nginx:latest 
                  ports:
                          - containerPort: 80
