stateful.yml



---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: nginx-statefulset
  namespace: nginx
spec:
  replicas: 3 
  serviceName: nginx-service  
  selector:
    matchLabels:
      app: mysql 
  template:
    metadata:
      labels:
        app: mysql  
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: my-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: my-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
