statefulset.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deployment
  namespace: mysql
spec:
  replicas: 3
  serviceName: mysql-service
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-server
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:  # <-- fixed typo here
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:   # <-- fixed plural here
            storage: 1Gi
