service-internal.yml

kind: Service
apiVersion: v1
metadata:
    name: dev-service
    namespace: nginx
spec:
   selector:
       app: dev
   ports:
    - protocol: TCP
      port: 80
      targetPort: 80
   type: ClusterIP
